--- a/.gitignore
+++ b/.gitignore
@@ -1,63 +1,21 @@
-*.[oa]
-*.dylib
-*.exe
-*.la
-*.dll
-*.so
-*~
-bibledit-dbus
-bibledit-vcs
-bibledit-shutdown
-bibledit-*.gz
-bibledit-gtk
-bibledit-xiphos
-bibledit-bibletime
-bibledit-git
-bibledit-rdwrt
+*.o
+*.a
 *.cache
 *.Po
-allpages
-contents
-CVS
-bumpversion
 Makefile
 config.log
 config.status
 .deps
 .cvsignore
 autom4te.cache/*
-geany_run_script.sh
 .dirstamp
 unittest
-bibledit-linux
-bibledit.application
-bibledit.exe
-bibledit.exe.config
-bibledit.exe.manifest
-bibledit.pdb
-windows/bibledit/obj/*
-bibledit.vshost.exe
-libbibledit.opensdf
-libbibledit.sdf
-windows/libbibledit/Debug/*
-windows/libbibledit/libbibledit/Debug/*
-bibledit.vshost.application
-bibledit.vshost.exe.manifest
-bibledit.vshost.exe.config
 .libs
 gdbserver
 generate
-
-
 .DS_Store
-
 UserInterfaceState.xcuserstate
-obj
-*.suo
-WindowsAzure
-*.pch
+config.h
+server
 
-lib/server
-
-lib/config.h
-
+*.in~
