Splitting up large files into smaller ones
https://github.com/bibledit/bibledit/issues/500

--- a/Makefile.am
+++ b/Makefile.am
@@ -505,7 +505,9 @@ unittest_SOURCES = \
 	unittests/shell.cpp \
 	unittests/ldap.cpp \
 	unittests/dev.cpp \
-	unittests/sample.cpp
+	unittests/sample.cpp \
+	unittests/config.cpp \
+	unittests/log.cpp
 
 unittest_LDADD = libbibledit.a
 
