Splitting large source file up into smaller ones
https://github.com/bibledit/bibledit/issues/500

--- a/Makefile.am
+++ b/Makefile.am
@@ -520,7 +520,10 @@ unittest_SOURCES = \
 	unittests/mail.cpp \
 	unittests/navigation.cpp \
 	unittests/resources.cpp \
-	unittests/notes.cpp
+	unittests/notes.cpp \
+	unittests/modifications.cpp \
+	unittests/volatile.cpp \
+	unittests/state.cpp
 
 unittest_LDADD = libbibledit.a
 
