Fixed: -file- is being assigned a //# sourceMappingURL, but already has one
The error has been seen in older versions of Firefox: -file- is being
assigned a //# sourceMappingURL, but already has one.

--- a/Makefile.am
+++ b/Makefile.am
@@ -24,6 +24,7 @@ libbibledit_a_SOURCES = \
 	filter/merge.cpp \
 	filter/date.cpp \
 	filter/memory.cpp \
+	filter/webview.cpp \
 	flate/flate.cpp \
 	assets/view.cpp \
 	assets/page.cpp \
@@ -530,7 +531,10 @@ unittest_SOURCES = \
 	unittests/cache.cpp \
 	unittests/login.cpp \
 	unittests/privileges.cpp \
-	unittests/statistics.cpp
+	unittests/statistics.cpp \
+	unittests/webview.cpp \
+	unittests/javascript.cpp
+
 
 unittest_LDADD = libbibledit.a
 
